# scribify

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  web_app.py
scribify/: chunker.py  cli.py  config.py  exceptions.py
tests/: test_api_client.py  test_chunker.py  test_config.py  test_merger.py  test_transcriber.py
whisper_cli/: api_client.py  audio_utils.py  constants.py  merger.py  progress.py  transcriber.py
